--- a/views/admin/addProduct.ejs
+++ b/views/admin/addProduct.ejs
@@ -12,7 +12,8 @@
 <body>
   <div class="container mt-5">
     <h2>Add Product</h2>
-    <form id="addProductForm" action="/admin/addProduct" method="POST" enctype="multipart/form-data" onsubmit="return validateForm()">
+    <form id="addProductForm" action="/admin/addProduct" method="POST" enctype="multipart/form-data"
+      onsubmit="return validateForm()">
       <div class="form-group">
         <label for="name">Name:</label>
         <input type="text" class="form-control" id="name" name="name" required>
@@ -35,26 +36,39 @@
         <textarea class="form-control" id="description" name="description" required></textarea>
         <div id="descriptionError" class="text-danger"></div>
       </div>
-      <div class="form-group">
-        <label for="price">Price:</label>
-        <input type="number" class="form-control" id="price" name="price" min="0" required>
-        <div id="priceError" class="text-danger"></div>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="price">Price:</label>
+          <input type="number" class="form-control" id="price" name="price" min="0" required>
+          <div id="priceError" class="text-danger"></div>
+        </div>
+        <div class="form-group col-md-6">
+          <label for="image">Image:</label>
+          <input type="file" class="form-control-file" id="image" name="images" accept="image/*" multiple required>
+          <div id="imageError" class="text-danger"></div>
+        </div>
       </div>
       <div class="form-group">
         <label for="stock">Stock:</label>
-        <input type="number" class="form-control" id="stock" name="stock" min="0" required>
+        <div class="mb-3 d-flex">
+          <label class="form-label">XS:</label>
+          <input id="s1" type="number" class="form-control ml-3 stock-input" name="s1" min="0" required>
+          <label class="form-label ml-2">S:</label>
+          <input id="s2" type="number" class="form-control ml-3 stock-input" name="s2" min="0" required>
+          <label class="form-label ml-2">M:</label>
+          <input id="s3" type="number" class="form-control ml-3 stock-input" name="s3" min="0" required>
+          <label class="form-label ml-2">L:</label>
+          <input id="s4" type="number" class="form-control ml-3 stock-input" name="s4" min="0" required>
+          <label class="form-label ml-2">XL:</label>
+          <input id="s5" type="number" class="form-control ml-3 stock-input" name="s5" min="0" required>
+        </div>
         <div id="stockError" class="text-danger"></div>
       </div>
-      <div class="form-group">
-        <label for="image">Image:</label>
-        <input type="file" class="form-control-file" id="image" name="images" accept="image/*" multiple required>
-        <div id="imageError" class="text-danger"></div>
-      </div>
+
       <div id="imagePreview"></div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
   </div>
-
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
@@ -66,14 +80,12 @@
       var category = document.getElementById('category').value;
       var description = document.getElementById('description').value;
       var price = document.getElementById('price').value;
-      var stock = document.getElementById('stock').value;
       var image = document.getElementById('image').value;
 
       var nameError = document.getElementById('nameError');
       var categoryError = document.getElementById('categoryError');
       var descriptionError = document.getElementById('descriptionError');
       var priceError = document.getElementById('priceError');
-      var stockError = document.getElementById('stockError');
       var imageError = document.getElementById('imageError');
 
       // Reset error messages
@@ -81,7 +93,6 @@
       categoryError.innerHTML = '';
       descriptionError.innerHTML = '';
       priceError.innerHTML = '';
-      stockError.innerHTML = '';
       imageError.innerHTML = '';
 
       // Validate name
@@ -108,16 +119,21 @@
         return false;
       }
 
-      // Validate stock
-      if (isNaN(stock) || stock < 0) {
-        stockError.innerHTML = 'Stock must be a non-negative number.';
-        return false;
-      }
-
       // Validate image (you can also check if a file is selected)
       if (!image) {
         imageError.innerHTML = 'Image is required.';
         return false;
+      }
+
+      // Validate stock
+      var stocks = document.querySelectorAll('.stock-input');
+      var totalStock = Array.from(stocks).reduce((acc, input) => acc + parseInt(input.value), 0);
+      var stockError = document.getElementById('stockError');
+      if (totalStock === 0) {
+        stockError.innerText = 'Please provide stock for at least one size.';
+        return false;
+      } else {
+        stockError.innerText = '';
       }
 
       return true;
@@ -148,7 +164,6 @@
       }
     });
   </script>
-
 </body>
 
 </html>
