--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -61,7 +61,7 @@
                                                             <%= row.price %>
                                                         </td>
                                                         <td>
-                                                            <%= row.stock %>
+                                                            <%= row.totalstock %>
                                                         </td>
                                                         <td>
                                                             <img src="/<%= row.image[0] %>" width="55"
