--- a/views/admin/updateProduct.ejs
+++ b/views/admin/updateProduct.ejs
@@ -31,7 +31,18 @@
       </div>
       <div class="form-group">
         <label for="stock">Stock:</label>
-        <input type="number" class="form-control" id="stock" name="stock" min="0" value="<%=product.stock%>" required>
+        <div class="mb-3 d-flex">
+          <label class="form-label">XS:</label>
+          <input id="s1" type="number" class="form-control ml-3 stock-input" value="<%= product.stock[0].quantity %>" name="s1" min="0" required>
+          <label class="form-label ml-2">S:</label>
+          <input id="s2" type="number" class="form-control ml-3 stock-input" value="<%= product.stock[1].quantity %>" name="s2" min="0" required>
+          <label class="form-label ml-2">M:</label>
+          <input id="s3" type="number" class="form-control ml-3 stock-input" value="<%= product.stock[2].quantity %>" name="s3" min="0" required>
+          <label class="form-label ml-2">L:</label>
+          <input id="s4" type="number" class="form-control ml-3 stock-input" value="<%= product.stock[3].quantity %>" name="s4" min="0" required>
+          <label class="form-label ml-2">XL:</label>
+          <input id="s5" type="number" class="form-control ml-3 stock-input" value="<%= product.stock[4].quantity %>" name="s5" min="0" required>
+        </div>
         <div id="stockError" class="text-danger"></div>
       </div>
       <div class="mb-3">
@@ -52,24 +63,33 @@
   <script>
     function validateForm() {
       var name = document.getElementById('name').value;
+      var category = document.getElementById('category').value;
       var description = document.getElementById('description').value;
       var price = document.getElementById('price').value;
-      var stock = document.getElementById('stock').value;
+      var image = document.getElementById('image').value;
 
       var nameError = document.getElementById('nameError');
+      var categoryError = document.getElementById('categoryError');
       var descriptionError = document.getElementById('descriptionError');
       var priceError = document.getElementById('priceError');
-      var stockError = document.getElementById('stockError');
+      var imageError = document.getElementById('imageError');
 
       // Reset error messages
       nameError.innerHTML = '';
+      categoryError.innerHTML = '';
       descriptionError.innerHTML = '';
       priceError.innerHTML = '';
-      stockError.innerHTML = '';
+      imageError.innerHTML = '';
 
       // Validate name
       if (name.trim() === '') {
         nameError.innerHTML = 'Name is required.';
+        return false;
+      }
+
+      // Validate category
+      if (category === '') {
+        categoryError.innerHTML = 'Category is required.';
         return false;
       }
 
@@ -85,10 +105,21 @@
         return false;
       }
 
-      // Validate stock
-      if (isNaN(stock) || stock < 0) {
-        stockError.innerHTML = 'Stock must be a non-negative number.';
+      // Validate image (you can also check if a file is selected)
+      if (!image) {
+        imageError.innerHTML = 'Image is required.';
         return false;
+      }
+
+      // Validate stock
+      var stocks = document.querySelectorAll('.stock-input');
+      var totalStock = Array.from(stocks).reduce((acc, input) => acc + parseInt(input.value), 0);
+      var stockError = document.getElementById('stockError');
+      if (totalStock === 0) {
+        stockError.innerText = 'Please provide stock for at least one size.';
+        return false;
+      } else {
+        stockError.innerText = '';
       }
 
       return true;
