--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -10,127 +10,200 @@
 
   <div class="site-section">
     <div class="container">
-        <div class="row mb-5">
-            <form class="col-md-12" method="post">
-                <% if (cart && cart.item && cart.item.length > 0) { %>
-                <div class="site-blocks-table">
-                    <table class="table table-bordered">
-                        <thead>
-                            <tr>
-                                <th class="product-thumbnail">Image</th>
-                                <th class="product-name">Product</th>
-                                <th class="product-thumbnail">Size</th>
-                                <th class="product-price">Price</th>
-                                <th class="product-quantity">Quantity</th>
-                                <th class="product-total">Total</th>
-                                <th class="product-remove">Remove</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <% cart.item.forEach((item, index) => { %>
-                            <tr>
-                                <td class="product-thumbnail">
-                                    <img src="<%= item.productId.image[0] %>" alt="Image" class="img-fluid">
-                                </td>
-                                <td class="product-name">
-                                    <h2 class="h5 text-black"><%= item.productId.name %></h2>
-                                </td>
-                                <td class="product-name">
-                                  <h2 class="h5 text-black"><%= item.size %></h2>
-                                </td>
-                                <td><%= item.productId.price %></td>
-                                <td>
-                                    <div class="input-group mb-3" style="max-width: 120px;">
-                                        <div class="input-group-prepend">
-                                            <button class="btn btn-outline-primary js-btn-minus"
-                                                type="button">&minus;</button>
-                                        </div>
-                                        <input type="text" class="form-control text-center"
-                                            value="<%= item.quantity %>" placeholder=""
-                                            aria-label="Example text with button addon"
-                                            aria-describedby="button-addon1">
-                                        <div class="input-group-append">
-                                            <button class="btn btn-outline-primary js-btn-plus"
-                                                type="button">&plus;</button>
-                                        </div>
-                                    </div>
-                                </td>
-                                <td>$<%= item.total %></td>
-                                <td><a href="#" class="btn btn-primary btn-sm">X</a></td>
-                            </tr>
-                            <% }) %>
-                        </tbody>
-                    </table>
-                </div>
-                <% } else { %>
-                <div class="alert">Your cart is empty.</div>
-                <% } %>
-            </form>
-        </div>
-    </div>
-</div>
-
-    
-
-      <div class="row">
-        <div class="col-md-6">
-          <div class="row mb-5">
-            <div class="col-md-6 mb-3 mb-md-0">
-              <button class="btn btn-primary btn-sm btn-block">Update Cart</button>
+      <div class="row mb-5">
+        <form class="col-md-12" method="post">
+          <% if (cart && cart.item && cart.item.length> 0) { %>
+            <div class="site-blocks-table">
+              <table class="table table-bordered">
+                <thead>
+                  <tr>
+                    <th class="product-thumbnail">Image</th>
+                    <th class="product-name">Product</th>
+                    <th class="product-thumbnail">Size</th>
+                    <th class="product-price">Price</th>
+                    <th class="product-quantity">Quantity</th>
+                    <th class="product-total">Total</th>
+                    <th class="product-remove">Remove</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% cart.item.forEach((item, index)=> { %>
+                    <tr>
+                      <td class="product-thumbnail">
+                        <img src="<%= item.productId.image[0] %>" alt="Image" class="img-fluid">
+                      </td>
+                      <td class="product-name">
+                        <h2 class="h5 text-black">
+                          <%= item.productId.name %>
+                        </h2>
+                        <p>
+                          <% if (insufficientStock.find(stockItem=> stockItem.item._id.toString() ===
+                            item._id.toString())) { %>
+                            <span class="out-of-stock-message text-danger">Out of Stock</span>
+                            <% } %>
+                        </p>
+                      </td>
+                      <td class="product-name">
+                        <h2 class="h5 text-black">
+                          <%= item.size %>
+                        </h2>
+                      </td>
+                      <td>
+                        <h5>₹<%= item.price %></h5>
+                      </td>
+                      <td>
+                        <div class="input-group mb-3" style="max-width: 120px;">
+                          <div class="input-group-prepend">
+                            <button
+                              onclick="updateQuantity('<%= cart._id %>','<%= item._id %>', '<%= item.size %>','<%= item.price %>','<%= index %>' , -1, )"
+                              class="btn btn-outline-primary js-btn-minus" type="button">&minus;</button>
+                          </div>
+                          <input id="sst<%= index%>" type="text" class="form-control text-center"
+                            value="<%= item.quantity %>" placeholder="" aria-label="Example text with button addon"
+                            aria-describedby="button-addon1">
+                          <div class="input-group-append">
+                            <button
+                              onclick="updateQuantity('<%= cart._id %>','<%= item._id %>', '<%= item.size %>','<%= item.price %>','<%= index %>' , 1, )"
+                              class="btn btn-outline-primary js-btn-plus" type="button">&plus;</button>
+                          </div>
+                        </div>
+                      </td>
+                      <td>
+                        <h5 id="total<%= index%>">₹<%= item.total %>
+                        </h5>
+                      </td>
+                      <td><a href="#" class="btn btn-primary btn-sm">X</a></td>
+                    </tr>
+                    <% }) %>
+                </tbody>
+              </table>
             </div>
-            <div class="col-md-6">
-              <button class="btn btn-outline-primary btn-sm btn-block">Continue Shopping</button>
+            <% } else { %>
+              <div class="alert">Your cart is empty.</div>
+              <% } %>
+        </form>
+      </div>
+    </div>
+  </div>
+
+
+
+  <div class="row">
+    <div class="col-md-6">
+      <div class="row mb-5">
+        <div class="col-md-6 mb-3 mb-md-0">
+          <button class="btn btn-primary btn-sm btn-block">Update Cart</button>
+        </div>
+        <div class="col-md-6">
+          <button class="btn btn-outline-primary btn-sm btn-block">Continue Shopping</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <label class="text-black h4" for="coupon">Coupon</label>
+          <p>Enter your coupon code if you have one.</p>
+        </div>
+        <div class="col-md-8 mb-3 mb-md-0">
+          <input type="text" class="form-control py-3" id="coupon" placeholder="Coupon Code">
+        </div>
+        <div class="col-md-4">
+          <button class="btn btn-primary btn-sm">Apply Coupon</button>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6 pl-5">
+      <div class="row justify-content-end">
+        <div class="col-md-7">
+          <div class="row">
+            <div class="col-md-12 text-right border-bottom mb-5">
+              <h3 class="text-black h4 text-uppercase">Cart Totals</h3>
             </div>
           </div>
+          <div class="row mb-5">
+            <div class="col-md-6">
+              <span class="text-black">Total</span>
+            </div>
+            <div class="col-md-6 text-right">
+              <strong id="total" class="text-black">
+                <%= cart.total %>
+              </strong>
+            </div>
+          </div>
+
           <div class="row">
             <div class="col-md-12">
-              <label class="text-black h4" for="coupon">Coupon</label>
-              <p>Enter your coupon code if you have one.</p>
-            </div>
-            <div class="col-md-8 mb-3 mb-md-0">
-              <input type="text" class="form-control py-3" id="coupon" placeholder="Coupon Code">
-            </div>
-            <div class="col-md-4">
-              <button class="btn btn-primary btn-sm">Apply Coupon</button>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 pl-5">
-          <div class="row justify-content-end">
-            <div class="col-md-7">
-              <div class="row">
-                <div class="col-md-12 text-right border-bottom mb-5">
-                  <h3 class="text-black h4 text-uppercase">Cart Totals</h3>
-                </div>
-              </div>
-              <div class="row mb-3">
-                <div class="col-md-6">
-                  <span class="text-black">Subtotal</span>
-                </div>
-                <div class="col-md-6 text-right">
-                  <strong class="text-black">$230.00</strong>
-                </div>
-              </div>
-              <div class="row mb-5">
-                <div class="col-md-6">
-                  <span class="text-black">Total</span>
-                </div>
-                <div class="col-md-6 text-right">
-                  <strong class="text-black">$230.00</strong>
-                </div>
-              </div>
-
-              <div class="row">
-                <div class="col-md-12">
-                  <button class="btn btn-primary btn-lg py-3 btn-block"
-                    onclick="window.location='checkout.html'">Proceed To Checkout</button>
-                </div>
-              </div>
+              <button class="btn btn-primary btn-lg py-3 btn-block" onclick="window.location='checkout.html'">Proceed To
+                Checkout</button>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+  </div>
+  </div>
+
+  <script>
+    async function updateQuantity(cartId, productId, size, price, index, count) {
+      try {
+        let quantityInput = document.getElementById(`sst${index}`);
+        let currentQuantity = parseInt(quantityInput.value);
+        const response = await fetch(`/updateCartQuantity/${productId}/${size}`, {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({
+            cartId: cartId,
+            action: count,
+            newQuantity: count + currentQuantity,
+          })
+        });
+        const data = await response.json();
+        if (data.success) {
+          quantityInput.value = data.newQuantity;
+          document.getElementById(`total${index}`).innerText = `₹ ${price * data.newQuantity}`;
+          document.getElementById(`total`).innerText = `₹ ${data.total}`;
+        } else {
+          console.error('Failed to update quantity:', data.error);
+          quantityInput.value = currentQuantity;
+
+          if (data.error === 'Quantity exceeds stock limits') {
+            Swal.fire({
+              text: 'Quantity exceeds stock limits',
+              icon: 'error',
+              confirmButtonText: 'OK',
+              customClass: {
+                title: 'text-danger',
+                popup: 'swal2-popup-custom',
+                confirmButton: 'btn btn-danger'
+              },
+              showCancelButton: false,
+              showCloseButton: true,
+              showLoaderOnConfirm: false,
+              timer: 3000
+            });
+          } else {
+            Swal.fire({
+              text: 'Quantity Cannot be zero',
+              icon: 'error',
+              confirmButtonText: 'OK',
+              customClass: {
+                title: 'text-danger',
+                popup: 'swal2-popup-custom',
+                confirmButton: 'btn btn-danger'
+              },
+              showCancelButton: false,
+              showCloseButton: true,
+              showLoaderOnConfirm: false,
+              timer: 3000
+            });
+          }
+        }
+      }catch(error){
+        console.error('Error parsing cart JSON:', error);
+      }
+    }
+  </script>
 
   <%- include ("footer.ejs") %>
