--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -10,7 +10,7 @@
 
   <div class="site-section">
     <div class="container">
-      <div class="row mb-5">
+      <div class="row mb-5 justify-content-center"> <!-- Center aligning the row -->
         <form class="col-md-12" method="post">
           <% if (cart && cart.item && cart.item.length> 0) { %>
             <div class="site-blocks-table">
@@ -49,7 +49,8 @@
                         </h2>
                       </td>
                       <td>
-                        <h5>₹<%= item.price %></h5>
+                        <h5>₹<%= item.price %>
+                        </h5>
                       </td>
                       <td>
                         <div class="input-group mb-3" style="max-width: 120px;">
@@ -72,7 +73,9 @@
                         <h5 id="total<%= index%>">₹<%= item.total %>
                         </h5>
                       </td>
-                      <td><a href="#" class="btn btn-primary btn-sm">X</a></td>
+                      <td><a onclick="confirm('/deletcart/<%= item._id %>/<%= item.size %>')"
+                          class="btn btn-primary btn-sm">X</a>
+                      </td>
                     </tr>
                     <% }) %>
                 </tbody>
@@ -83,66 +86,69 @@
               <% } %>
         </form>
       </div>
-    </div>
-  </div>
 
-
-
-  <div class="row">
-    <div class="col-md-6">
       <div class="row mb-5">
-        <div class="col-md-6 mb-3 mb-md-0">
-          <button class="btn btn-primary btn-sm btn-block">Update Cart</button>
-        </div>
         <div class="col-md-6">
-          <button class="btn btn-outline-primary btn-sm btn-block">Continue Shopping</button>
+          <a href="/shop" class="btn btn-outline-primary btn-sm btn-block">Continue Shopping</a>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <label class="text-black h4" for="coupon">Coupon</label>
-          <p>Enter your coupon code if you have one.</p>
-        </div>
-        <div class="col-md-8 mb-3 mb-md-0">
-          <input type="text" class="form-control py-3" id="coupon" placeholder="Coupon Code">
-        </div>
-        <div class="col-md-4">
-          <button class="btn btn-primary btn-sm">Apply Coupon</button>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 pl-5">
-      <div class="row justify-content-end">
-        <div class="col-md-7">
-          <div class="row">
-            <div class="col-md-12 text-right border-bottom mb-5">
-              <h3 class="text-black h4 text-uppercase">Cart Totals</h3>
-            </div>
-          </div>
-          <div class="row mb-5">
-            <div class="col-md-6">
-              <span class="text-black">Total</span>
-            </div>
-            <div class="col-md-6 text-right">
-              <strong id="total" class="text-black">
-                <%= cart.total %>
-              </strong>
-            </div>
-          </div>
+        <div class="col-md-6 pl-5">
+          <div class="row justify-content-end">
+            <div class="col-md-7">
+              <div class="row">
+                <div class="col-md-12 text-right border-bottom mb-5">
+                  <h3 class="text-black h4 text-uppercase">Cart Totals</h3>
+                </div>
+              </div>
+              <div class="row mb-5">
+                <div class="col-md-6">
+                  <span class="text-black">Total</span>
+                </div>
+                <div class="col-md-6 text-right">
+                  <strong id="total" class="text-black">
+                    <%= cart.total %>
+                  </strong>
+                </div>
+              </div>
 
-          <div class="row">
-            <div class="col-md-12">
-              <button class="btn btn-primary btn-lg py-3 btn-block" onclick="window.location='checkout.html'">Proceed To
-                Checkout</button>
+              <div class="row">
+                <div class="col-md-12">
+                  <a href="/checkout" id="checkout" class="btn btn-primary btn-lg py-3 btn-block">Proceed To
+                    Checkout</a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  </div>
-  </div>
 
+  </div>
+  </div>
+  <script>
+
+    function confirm(itemId) {
+      Swal.fire({
+        title: "Are you sure?",
+        text: "Are you sure you want to proceed?",
+        icon: "warning",
+        showCancelButton: true,
+        confirmButtonColor: "#3085d6",
+        cancelButtonColor: "#d33",
+        confirmButtonText: "Confirm",
+        cancelButtonText: "Cancel",
+        dangerMode: true,
+      })
+        .then((result) => {
+          if (result.isConfirmed) {
+
+            window.location.href = itemId;
+          } else {
+            console.log("User canceled");
+          }
+        });
+    }
+  </script>
   <script>
     async function updateQuantity(cartId, productId, size, price, index, count) {
       try {
@@ -200,7 +206,7 @@
             });
           }
         }
-      }catch(error){
+      } catch (error) {
         console.error('Error parsing cart JSON:', error);
       }
     }
