--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -11,56 +11,57 @@
   </div>
 </div>
 
+<form id="orderform">
 <div class="site-section">
   <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <% if (address && address.address) { %>
-        <div class="address-list">
-          <% address.address.forEach((address,index)=> { %>
-          <div class="address-item btn border">
-            <label for="address<%= index + 1 %>">
-              <!-- Add a data attribute to the radio button to store the address ID -->
-              <input type="radio" name="address" id="address<%= index+1 %>" value="<%= index %>" class="address-radio"
-                data-address-id="<%= address._id %>">
-              <span class="larger-text font-weight-bold text-black">
-                <%= address.save_as %>
-              </span>
-              <div class="address-details larger-text">
-                <p><span class="key">Full Name: </span>
-                  <%= address.name %>
-                </p>
-                <p><span class="key">House name/Flat no:</span>
-                  <%= address.housename %>
-                </p>
-                <p><span class="key">Street:</span>
-                  <%= address.street %>
-                </p>
-                <p><span class="key">City:</span>
-                  <%= address.city %>
-                </p>
-                <p><span class="key">Pin-Code:</span>
-                  <%= address.pincode %>
-                </p>
-                <p><span class="key">State:</span>
-                  <%= address.state %>
-                </p>
-                <p><span class="key">Country:</span>
-                  <%= address.country %>
-                </p>
-                <!-- Add other address properties as needed -->
-              </div>
-            </label>
+    <div class="row align-items-stretch">
+        <div class="col-md-6">
+          <% if (address && address.address) { %>
+          <div class="address-list">
+            <% address.address.forEach((address,index)=> { %>
+            <div class="address-item btn border">
+              <label for="address<%= index + 1 %>">
+                <!-- Add a data attribute to the radio button to store the address ID -->
+                <input type="radio" name="address" id="address<%= index+1 %>" value="<%= index %>" class="address-radio"
+                  data-address-id="<%= address._id %>">
+                <span class="larger-text font-weight-bold text-black">
+                  <%= address.save_as %>
+                </span>
+                <div class="address-details larger-text">
+                  <p><span class="key">Full Name: </span>
+                    <%= address.name %>
+                  </p>
+                  <p><span class="key">House name/Flat no:</span>
+                    <%= address.housename %>
+                  </p>
+                  <p><span class="key">Street:</span>
+                    <%= address.street %>
+                  </p>
+                  <p><span class="key">City:</span>
+                    <%= address.city %>
+                  </p>
+                  <p><span class="key">Pin-Code:</span>
+                    <%= address.pincode %>
+                  </p>
+                  <p><span class="key">State:</span>
+                    <%= address.state %>
+                  </p>
+                  <p><span class="key">Country:</span>
+                    <%= address.country %>
+                  </p>
+                  <!-- Add other address properties as needed -->
+                </div>
+              </label>
+            </div>
+            <% }); %>
           </div>
-          <% }); %>
+          <% } else { %>
+          <div>No addresses found.</div>
+          <% } %>
+          <div>
+            <a class="btn btn-primary mt-3" href="/addAddress">Add Address</a>
+          </div>
         </div>
-        <% } else { %>
-        <div>No addresses found.</div>
-        <% } %>
-        <div>
-          <a class="btn btn-primary mt-3" href="/addAddress">Add Address</a>
-        </div>
-      </div>
 
       <!-- Right Column for Coupon Code and Your Order -->
       <div class="col-md-6">
@@ -115,6 +116,10 @@
                   <td class="text-black font-weight-bold">₹0</td>
                 </tr>
                 <tr>
+                  <td class="text-black font-weight-bold">Delivery:</td>
+                  <td class="text-black font-weight-bold">₹0</td>
+                </tr>
+                <tr>
                   <td class="text-black font-weight-bold">Order Total:</td>
                   <td class="text-black font-weight-bold" id="total">₹<%= data.total %>
                   </td>
@@ -164,162 +169,65 @@
     </div>
   </div>
 </div>
-  <script>
-    function handlePaymentMethodSelection() {
-      const selectedPaymentMethod = document.querySelector(
-        'input[name="paymentOption"]:checked'
-      );
-      if (selectedPaymentMethod) {
-        const hiddenInput = document.getElementById("pay");
-        hiddenInput.value = selectedPaymentMethod.value;
-      }
+</form>
+<script>
+  function handlePaymentMethodSelection() {
+    const selectedPaymentMethod = document.querySelector(
+      'input[name="paymentOption"]:checked'
+    );
+    if (selectedPaymentMethod) {
+      const hiddenInput = document.getElementById("pay");
+      hiddenInput.value = selectedPaymentMethod.value;
     }
-    document.getElementById('placeOrderBtn').addEventListener('click', function (event) {
-      event.preventDefault(); // Prevent the default form submission behavior
-      proceedToOrder(); // Call the proceedToOrder function
-    });
+  }
+  document.getElementById('placeOrderBtn').addEventListener('click', function (event) {
+    event.preventDefault(); // Prevent the default form submission behavior
+    proceedToOrder(); // Call the proceedToOrder function
+  });
 
-    function proceedToOrder() {
-      var selectedAddress = document.querySelector('input[name="address"]:checked');
-      var selectedPayment = document.querySelector('input[name="paymentOption"]:checked');
+  function proceedToOrder() {
+    var selectedAddress = document.querySelector('input[name="address"]:checked');
+    var selectedPayment = document.querySelector('input[name="paymentOption"]:checked');
 
-      if (!selectedAddress) {
-        console.log("Address not selected");
-        Swal.fire({
-          text: "Select the delivery address",
-          icon: "error",
-          confirmButtonText: "OK",
-          customClass: {
-            title: "text-danger",
-            popup: "swal2-popup-custom",
-            confirmButton: "btn btn-danger",
-          },
-          showCancelButton: false,
-          showCloseButton: true,
-          showLoaderOnConfirm: false
-        });
-      } else if (!selectedPayment) {
-        console.log("Payment option not selected");
-        Swal.fire({
-          text: "Select a Payment option",
-          icon: "error",
-          confirmButtonText: "OK",
-          customClass: {
-            title: "text-danger",
-            popup: "swal2-popup-custom",
-            confirmButton: "btn btn-danger",
-          },
-          showCancelButton: false,
-          showCloseButton: true,
-          showLoaderOnConfirm: false
-        });
-      } else if (selectedPayment.value == "cashOnDelivery") {
-        console.log("Cash on Delivery selected");
-        document.getElementById("orderform").action = "/order";
-        document.getElementById("orderform").method = "post";
-        document.getElementById("orderform").submit();
-        const amount = document.getElementById("total").textContent.trim();
-        document.getElementById("total").innerText = `${amount}`;
-        document.getElementById("amount").value = `${amount}`;
-      }
+    if (!selectedAddress) {
+      console.log("Address not selected");
+      Swal.fire({
+        text: "Select the delivery address",
+        icon: "error",
+        confirmButtonText: "OK",
+        customClass: {
+          title: "text-danger",
+          popup: "swal2-popup-custom",
+          confirmButton: "btn btn-danger",
+        },
+        showCancelButton: false,
+        showCloseButton: true,
+        showLoaderOnConfirm: false
+      });
+    } else if (!selectedPayment) {
+      console.log("Payment option not selected");
+      Swal.fire({
+        text: "Select a Payment option",
+        icon: "error",
+        confirmButtonText: "OK",
+        customClass: {
+          title: "text-danger",
+          popup: "swal2-popup-custom",
+          confirmButton: "btn btn-danger",
+        },
+        showCancelButton: false,
+        showCloseButton: true,
+        showLoaderOnConfirm: false
+      });
+    } else if (selectedPayment.value == "cashOnDelivery") {
+      console.log("Cash on Delivery selected");
+      document.getElementById("orderform").action = "/order";
+      document.getElementById("orderform").method = "post";
+      document.getElementById("orderform").submit();
+      const amount = document.getElementById("total").textContent.trim();
+      document.getElementById("total").innerText = `${amount}`;
+      document.getElementById("amount").value = `${amount}`;
     }
-
-    function validateAddress() {
-      var errors = '';
-      var saveas = document.getElementById('saveas').value;
-      var fullname = document.getElementById('fullname').value;
-      var email = document.getElementById('email').value;
-      var adname = document.getElementById('adname').value;
-      var street = document.getElementById('street').value;
-      var pincode = document.getElementById('pincode').value;
-      var city = document.getElementById('city').value;
-      var state = document.getElementById('state').value;
-      var country = document.getElementById('country').value;
-      var mobile = document.getElementById('mobile').value;
-
-      var saveasError = document.getElementById('saveasError');
-      var fullnameError = document.getElementById('fullnameError');
-      var emailError = document.getElementById('emailError');
-      var adnameError = document.getElementById('adnameError');
-      var streetError = document.getElementById('streetError');
-      var pincodeError = document.getElementById('pincodeError');
-      var cityError = document.getElementById('cityError');
-      var stateError = document.getElementById('stateError');
-      var countryError = document.getElementById('countryError');
-      var mobileError = document.getElementById('mobileError');
-
-      saveasError.innerHTML = '';
-      fullnameError.innerHTML = '';
-      emailError.innerHTML = '';
-      adnameError.innerHTML = '';
-      streetError.innerHTML = '';
-      pincodeError.innerHTML = '';
-      cityError.innerHTML = '';
-      stateError.innerHTML = '';
-      countryError.innerHTML = '';
-      mobileError.innerHTML = '';
-
-      if (!saveas) {
-        saveasError.innerHTML = 'Save as is required.';
-        errors += 'Save as is required.\n';
-      }
-      if (!fullname) {
-        fullnameError.innerHTML = 'Full name is required.';
-        errors += 'Full name is required.\n';
-      }
-      if (!email) {
-        emailError.innerHTML = 'Email is required.';
-        errors += 'Email is required.\n';
-      } else if (!email.match(/^([\w-\.]+@([\w-]+\.)+[\w-]{2,4})?$/)) {
-        emailError.innerHTML = 'Invalid email address.';
-        errors += 'Invalid email address.\n';
-      }
-      if (!adname) {
-        adnameError.innerHTML = 'House name/Flat no is required.';
-        errors += 'House name/Flat no is required.\n';
-      }
-      if (!street) {
-        streetError.innerHTML = 'Street is required.';
-        errors += 'Street is required.\n';
-      }
-      if (!pincode) {
-        pincodeError.innerHTML = 'Pincode is required.';
-        errors += 'Pincode is required.\n';
-      } else if (!pincode.match(/^\d{6}$/)) {
-        pincodeError.innerHTML = 'Invalid pincode.';
-        errors += 'Invalid pincode.\n';
-      }
-      if (!city) {
-        cityError.innerHTML = 'City is required.';
-        errors += 'City is required.\n';
-      }
-      if (!state) {
-        stateError.innerHTML = 'State is required.';
-        errors += 'State is required.\n';
-      }
-      if (!country) {
-        countryError.innerHTML = 'Country is required.';
-        errors += 'Country is required.\n';
-      }
-      if (!mobile) {
-        mobileError.innerHTML = 'Mobile number is required.';
-        errors += 'Mobile number is required.\n';
-      } else if (!mobile.match(/^\d{10}$/)) {
-        mobileError.innerHTML = 'Invalid mobile number.';
-        errors += 'Invalid mobile number.\n';
-      }
-
-      if (errors) {
-        return false;
-      } else {
-        return true;
-      }
-    }
-
-    document.getElementById('saveChangesButton').addEventListener('click', function (event) {
-      if (!validateAddress()) {
-        event.preventDefault();
-      }
-    });
-  </script>
-  <%- include ("footer.ejs") %>
+  }
+</script>
+<%- include ("footer.ejs") %>
