--- a/views/user/shop-single.ejs
+++ b/views/user/shop-single.ejs
@@ -82,7 +82,12 @@
                 </label>
               </div>
             </div>
-            <br>
+
+            <% if(pass&&pass.length>0){%>
+              <div style="color: red; font-size: 16px; font-weight: bold;">
+                  <%= pass%>
+              </div>
+                  <%}%>
             <div class="d-flex align-items-center mb-4">
               <button type="submit" class="btn btn-primary mr-2">
                   <span class="fas fa-shopping-cart"></span> Add to Cart
@@ -101,7 +106,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-7 site-section-heading text-center pt-4">
-          <h2>Featured Products</h2>
+          <h2>Related Products</h2>
         </div>
       </div>
       <div class="row">
