--- a/views/admin/adminHead.ejs
+++ b/views/admin/adminHead.ejs
@@ -7,7 +7,7 @@
   <title>Vintagerags-admin</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-  <link rel="shortcut icon" type="image/png" href="../../static/admin/images/logos/favicon.png" />
+  <link rel="shortcut icon" type="image/png" href="../../static/images/logo.png" />
   <link rel="stylesheet" href="../../static/admin/css/styles.min.css" />
 </head>
 
