--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -144,7 +144,7 @@
             2018</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam iste dolor accusantium facere corporis
             ipsum animi deleniti fugiat. Ex, veniam?</p>
-          <p><a href="#" class="btn btn-primary btn-sm">Shop Now</a></p>
+          <p><a href="/shop" class="btn btn-primary btn-sm">Shop Now</a></p>
         </div>
       </div>
     </div>
