--- a/views/user/ordertracking.ejs
+++ b/views/user/ordertracking.ejs
@@ -125,7 +125,7 @@
     <h5 class="text-dark">Order ID: <%= order[0].orderId %>
     </h5>
     <p class="text-dark">Delivery Address: <%= order[0].address[0].save_as %>,
-        <%= order[0].address[0].houseName %>,
+        <%= order[0].address[0].housename %>,
         <%= order[0].address[0].city %>,
         <%= order[0].address[0].pincode %>
     </p>
