--- a/views/admin/adminPanel.ejs
+++ b/views/admin/adminPanel.ejs
@@ -2,6 +2,28 @@
   <!--  Header End -->
   <div class="container-fluid">
     <!--  Row 1 -->
+      <form action="/admin/downloadsales" method="post" class="mb-3">
+        <div class="row">
+            <div class="col-md-4 mb-3">
+                <label for="startDate" class="form-label">Start Date:</label>
+                <input type="date" id="startDate" name="startDate" class="form-control" placeholder="Start Date">
+            </div>
+            <div class="col-md-4 mb-3">
+                <label for="endDate" class="form-label">End Date:</label>
+                <input type="date" id="endDate" name="endDate" class="form-control" placeholder="End Date">
+            </div>
+            <div class="col-md-4 mt-3">
+                <button type="submit" class="btn btn-primary btn-block mt-2">
+                    <i class="mdi mdi-email btn-icon-prepend"></i> Download Report
+                </button>
+            </div>
+        </div>
+    </form>
+    <% if(expressFlash.derror){%>
+      <div class="alter text-danger text-start"><%= expressFlash.derror%></div>
+    <%}%>
+    
+  
     <div class="row">
       <div class="col-lg-8 d-flex align-items-strech">
         <div class="card w-100">
